Removed 'bundle' files

--- a/preferences-impl/src/main/resources/application.conf
+++ b/preferences-impl/src/main/resources/application.conf
@@ -2,8 +2,8 @@ play.modules.enabled += com.frank.lagomtest.preferences.impl.PreferencesModule
 
 lagom.persistence.ask-timeout = 10s
 
-preferences.cassandra.keyspace = preferences
+prefs.cassandra.keyspace = preferences
 
-cassandra-journal.keyspace = ${preferences.cassandra.keyspace}
-cassandra-snapshot-store.keyspace = ${preferences.cassandra.keyspace}
-lagom.persistence.read-side.cassandra.keyspace = ${preferences.cassandra.keyspace}
+cassandra-journal.keyspace = ${prefs.cassandra.keyspace}
+cassandra-snapshot-store.keyspace = ${prefs.cassandra.keyspace}
+lagom.persistence.read-side.cassandra.keyspace = ${prefs.cassandra.keyspace}
