--- a/preferences-impl/pom.xml
+++ b/preferences-impl/pom.xml
@@ -33,6 +33,14 @@
         </dependency>
         <dependency>
             <groupId>com.lightbend.lagom</groupId>
+            <artifactId>lagom-javadsl-broker_2.11</artifactId>
+        </dependency>    
+        <dependency>
+            <groupId>com.lightbend.lagom</groupId>
+            <artifactId>lagom-javadsl-kafka-broker_2.11</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.lightbend.lagom</groupId>
             <artifactId>lagom-javadsl-persistence-cassandra_2.11</artifactId>
         </dependency>
         <dependency>
