--- a/stream-impl/src/main/resources/application.conf
+++ b/stream-impl/src/main/resources/application.conf
@@ -1,4 +1,9 @@
-#
-# Copyright (C) 2016-2017 Lightbend Inc. <https://www.lightbend.com>
-#
 play.modules.enabled += com.frank.lagomtest.stream.impl.StreamModule
+
+lagom.persistence.ask-timeout = 10s
+
+stream.cassandra.keyspace = stream
+
+cassandra-journal.keyspace = ${stream.cassandra.keyspace}
+cassandra-snapshot-store.keyspace = ${stream.cassandra.keyspace}
+lagom.persistence.read-side.cassandra.keyspace = ${stream.cassandra.keyspace}
