--- a/preferences-impl/src/main/resources/application.conf
+++ b/preferences-impl/src/main/resources/application.conf
@@ -7,3 +7,23 @@ prefs.cassandra.keyspace = preferences
 cassandra-journal.keyspace = ${prefs.cassandra.keyspace}
 cassandra-snapshot-store.keyspace = ${prefs.cassandra.keyspace}
 lagom.persistence.read-side.cassandra.keyspace = ${prefs.cassandra.keyspace}
+
+lagom.circuit-breaker {
+
+  # will be used by all method but get ones
+  preferences {
+
+      max-failures = 2
+
+      reset-timeout = 30s
+  }
+
+  # will be used by all method by get methods
+  preferences-get {
+
+    max-failures = 5
+
+    reset-timeout = 30s
+  }
+
+}
