--- a/authorization-impl/src/main/resources/application.conf
+++ b/authorization-impl/src/main/resources/application.conf
@@ -7,3 +7,14 @@ auth.cassandra.keyspace = authorization
 cassandra-journal.keyspace = ${auth.cassandra.keyspace}
 cassandra-snapshot-store.keyspace = ${auth.cassandra.keyspace}
 lagom.persistence.read-side.cassandra.keyspace = ${auth.cassandra.keyspace}
+
+lagom.circuit-breaker {
+
+  authorization {
+
+    max-failures = 5
+
+    reset-timeout = 30s
+  }
+
+}
